--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
   },
   "author": "cairongquan",
   "license": "ISC",
+  "type": "module",
+  "types": "index.d.ts",
+  "keywords": [
+    "node",
+    "canvas",
+    "contributions",
+    "github"
+  ],
   "dependencies": {
     "@rollup/plugin-typescript": "^11.1.5",
     "@rollup/rollup-darwin-arm64": "^4.9.3",
@@ -15,5 +23,10 @@
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cairongquan/contriGraph.git"
+  },
+  "umdModuleName": "index"
 }
