--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "rollup:build": "rm -fr dist && pnpm rollup -c"
   },
+  "sideEffects": true,
   "author": "cairongquan",
   "license": "ISC",
   "type": "module",
@@ -16,13 +17,13 @@
     "contributions",
     "github"
   ],
-  "dependencies": {
+  "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.5",
-    "@rollup/rollup-darwin-arm64": "^4.9.3",
-    "rollup": "^4.9.3",
+    "rollup": "^2.79.1",
     "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "rollup-plugin-typescript2": "^0.36.0"
   },
   "repository": {
     "type": "git",
