--- a/resource/package.json
+++ b/resource/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.8",
   "description": "contri图表生成插件",
   "main": "index.js",
+  "scripts": {
+    "rollup:build": "rm -fr dist && pnpm rollup -c"
+  },
   "sideEffects": true,
   "author": "cairongquan",
   "license": "ISC",
