--- a/resource/package.json
+++ b/resource/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contri-graph",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "contri图表生成插件",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,9 @@
     "node",
     "canvas",
     "contributions",
-    "github"
+    "github",
+    "github contributions",
+    "plugin"
   ],
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.5",
