--- a/resource/package.json
+++ b/resource/package.json
@@ -19,14 +19,7 @@
     "github contributions",
     "plugin"
   ],
-  "devDependencies": {
-    "@rollup/plugin-typescript": "^11.1.5",
-    "rollup": "^2.79.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "rollup-plugin-typescript2": "^0.36.0"
-  },
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/cairongquan/contriGraph.git"
