--- a/resource/package.json
+++ b/resource/package.json
@@ -1,7 +1,7 @@
 {
   "name": "contri-graph",
   "version": "0.0.9",
-  "description": "contri图表生成插件",
+  "description": "Contribution graph visualization library for canvas or SVG.",
   "main": "index.js",
   "scripts": {
     "rollup:build": "rm -fr dist && pnpm rollup -c"
@@ -17,9 +17,11 @@
     "contributions",
     "github",
     "github contributions",
-    "plugin"
+    "plugin",
+    "SVG",
+    "SVG contributions",
+    "visualization"
   ],
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/cairongquan/contriGraph.git"
