--- a/resource/package.json
+++ b/resource/package.json
@@ -1,30 +1,1 @@
-{
-  "name": "contri-graph",
-  "version": "0.0.9",
-  "description": "Contribution graph visualization library for canvas or SVG.",
-  "main": "index.js",
-  "scripts": {
-    "rollup:build": "rm -fr dist && pnpm rollup -c"
-  },
-  "sideEffects": true,
-  "author": "cairongquan",
-  "license": "ISC",
-  "type": "module",
-  "types": "index.d.ts",
-  "keywords": [
-    "node",
-    "canvas",
-    "contributions",
-    "github",
-    "github contributions",
-    "plugin",
-    "SVG",
-    "SVG contributions",
-    "visualization"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/cairongquan/contriGraph.git"
-  },
-  "umdModuleName": "index"
-}
+{"name":"contri-graph","version":"1.0.0","description":"Contribution graph visualization library for canvas or SVG.","main":"index.js","scripts":{"rollup:build":"rm -fr dist && pnpm rollup -c"},"sideEffects":true,"author":"cairongquan","license":"ISC","type":"module","types":"index.d.ts","keywords":["node","canvas","contributions","github","github contributions","plugin","SVG","SVG contributions","visualization"],"repository":{"type":"git","url":"https://github.com/cairongquan/contriGraph.git"},"umdModuleName":"index"}
